# voice_broadcast

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
src/: AudioCapture.cpp  AudioEndpoint.cpp  AudioEndpointCollection.cpp  AudioRender.cpp  Log.cpp  NetClientPool.cpp  NetServerPool.cpp  NetStreammer.cpp  main.cpp
src/h/: Helper.h  Log.h
src/h/Audio/: AudioCapture.h  AudioEndpoint.h  AudioEndpointCollection.h  AudioRender.h
src/h/Net/: NetClientPool.h  NetController.h  NetServerPool.h  NetStreammer.h
